--- a/lambda.cabal
+++ b/lambda.cabal
@@ -17,12 +17,16 @@ library
   hs-source-dirs:      src
   ghc-options:         -Wall -Werror=incomplete-patterns
   exposed-modules:     Lib,
+                       Args,
                        CodeGen,
                        Compiler,
                        Compiler.Types,
                        IIR,
+                       Lang.Types
                        Lua,
                        Parser,
+                       Parser.Errors,
+                       Parser.Tokenizer,
                        Types
   build-depends:       base >= 4.7 && < 5,
                        binary,
@@ -33,6 +37,7 @@ library
                        lens,
                        megaparsec,
                        mtl,
+                       optparse-applicative,
                        text,
                        transformers
   default-language:    Haskell2010
@@ -51,6 +56,7 @@ executable ithil
                        lens,
                        megaparsec,
                        mtl,
+                       optparse-applicative,
                        text,
                        transformers
   default-language:    Haskell2010
