--- a/ithil.cabal
+++ b/ithil.cabal
@@ -1,8 +1,8 @@
-name:                lambda
+name:                ithil
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/lambda#readme
+homepage:            https://github.com/githubuser/ithil#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
@@ -48,7 +48,7 @@ executable ithil
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base,
-                       lambda,
+                       ithil,
                        binary,
                        binary-bits,
                        bytestring,
@@ -62,12 +62,16 @@ executable ithil
                        transformers
   default-language:    Haskell2010
 
-test-suite lambda-test
+test-suite ithil-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , lambda
+                     , ithil
+                     , mtl
+                     , tasty
+                     , tasty-hunit
+                     , text
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
