Update parser & tests

--- a/ithil.cabal
+++ b/ithil.cabal
@@ -22,7 +22,13 @@ library
                        Compiler,
                        Compiler.Types,
                        IIR,
-                       Lang.Types
+                       IIR.Compiler,
+                       IIR.Types,
+
+                       Lang.Lexer,
+                       Lang.Parser,
+                       Lang.Types,
+
                        Lua,
                        Parser,
                        Parser.Errors,
@@ -31,7 +37,6 @@ library
                        Types
   build-depends:       base >= 4.7 && < 5,
                        binary,
-                       binary-bits,
                        bytestring,
                        containers,
                        extra,
@@ -47,27 +52,31 @@ executable ithil
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base,
-                       ithil,
-                       binary,
-                       binary-bits,
-                       bytestring,
-                       containers,
-                       extra,
-                       lens,
-                       megaparsec,
-                       mtl,
-                       optparse-applicative,
-                       text,
-                       transformers
+  build-depends:       base
+                     , ithil
+                     , binary
+                     , bytestring
+                     , containers
+                     , extra
+                     , lens
+                     , megaparsec
+                     , mtl
+                     , optparse-applicative
+                     , text
+                     , transformers
   default-language:    Haskell2010
 
 test-suite ithil-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       Test.Lang.Lexer
+                     , Test.Lang.Parser
   build-depends:       base
                      , ithil
+                     , containers
+                     , extra
+                     , megaparsec
                      , mtl
                      , tasty
                      , tasty-hunit
