--- a/ithil.cabal
+++ b/ithil.cabal
@@ -72,6 +72,7 @@ test-suite ithil-test
   main-is:             Spec.hs
   other-modules:       Test.Lang.Lexer
                      , Test.Lang.Parser
+                     , Test.Lang.Types
   build-depends:       base
                      , ithil
                      , containers
